--- a/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/active-wildfire-map/active-wildfire-map.component.html
@@ -40,6 +40,11 @@
                     Find My Location
                 </button>
             </div>
+            <div class="my-location-button">
+                <button mat-raised-button (click)="navigateToReportOfFire()">
+                    Report Of Fire
+                </button>
+            </div>
             <div class="my-location-button-min">
               <button mat-icon-button (click)="useMyCurrentLocation()"><mat-icon class="location-icon">my_location</mat-icon></button>
             </div>
