--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/title-page/rof-title-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/title-page/rof-title-page.component.html
@@ -1,10 +1,10 @@
-<div>
+<div class="page-content">
   <div class="rof-text-title">{{ title }}</div>
   <img alt="Report of Fire Banner" [src]="imageUrl" height="248px" class="rof-image"/>
   <div class="rof-text-secondary-header">{{ message }}</div>
   <div *ngIf="!closeButton" class="rof-button-container">
-    <button mat-flat-button class="rof-button" (click)="openCallPage()">Call</button>
-	  <button mat-flat-button class="rof-button-primary" (click)="next()">Start</button>
+      <button mat-flat-button class="rof-button" (click)="openCallPage()">Call</button>
+      <button mat-flat-button class="rof-button-primary" (click)="next()">Start<mat-icon>arrow_forward</mat-icon></button>
   </div>
   <div *ngIf="closeButton" class="rof-button-container">
     <button mat-flat-button class="rof-button-primary" (click)="close()">Close</button>
