WFNEWS-1305 Default URL for evac orders/alerts (#1003)
* WFNEWS-1305 Default URL for evac orders/alerts

* Add missing evac icons

---------

Co-authored-by: Dylan <dylan.hemsworth@gmail.com>

--- a/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/public-incident-page/incident-info-header/incident-header-panel.component.html
@@ -50,10 +50,8 @@
         <div class="evac-list" *ngFor="let evac of evacOrders">
           <mat-icon [class]="evac.orderAlertStatus === 'Alert' ? 'alert' : 'order'" style="text-decoration: none;">{{
             evac.orderAlertStatus === 'Alert' ? 'warning' : 'error' }} </mat-icon>
-          <a *ngIf="evac.uri" [class]="'label ' + evac.orderAlertStatus === 'Alert' ? 'alert' : 'order'"
-            [href]="evac.uri" target="_blank" rel="noopener">{{ evac.orderAlertStatus }}: {{evac.eventName}}</a>
-          <div *ngIf="!evac.uri" [class]="'label ' + evac.orderAlertStatus === 'Alert' ? 'alert' : 'order'">{{
-            evac.orderAlertStatus }}: {{evac.eventName}}</div>
+          <a [class]="'label ' + evac.orderAlertStatus === 'Alert' ? 'alert' : 'order'" [href]="evac.uri ? evac.uri : defaultEvacURL"
+            target="_blank" rel="noopener">{{ evac.orderAlertStatus }}: {{evac.eventName}}</a>
           <div class="issued-by">(Issued By: {{evac.issuingAgency}})</div>
         </div>
       </div>
