--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/location-page/rof-location-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/location-page/rof-location-page.component.html
@@ -1,8 +1,9 @@
 <div class="page-content">
   <div class="rof-text-primary-header">{{ title }}</div>
   <div class="rof-text-secondary-header">{{ message }}</div>
-  <div>
-    <wf-map-container 
+  <div >
+    <wf-map-container
+      *ngIf="mapConfig"
       [mapConfig]="mapConfig"
       (mapInitialized)="initMap($event)"
     ></wf-map-container>
