--- a/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.scss
@@ -107,6 +107,9 @@ table tr:nth-child(even) td{
         border-radius: 50%;
         cursor: pointer;
     }
+    mat-icon{
+        transform: translateX(-5px);
+    }
 }
 
 .stage-of-control-checkbox-group{
