--- a/client/wfnews-war/src/main/angular/src/app/components/wf-admin-panel/wf-admin-panel.component.desktop.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wf-admin-panel/wf-admin-panel.component.desktop.scss
@@ -55,6 +55,20 @@ table tr:nth-child(even) td{
     font-size: 15px;
     border-radius: 20%;
     background-color: #f2f2f2;
+    border: none;
+    .button-wrapper{
+        padding: 0;
+        min-width: 0;
+        width: 40px;
+        height: 40px;
+        flex-shrink: 0;
+        line-height: 40px;
+        border-radius: 50%;
+        cursor: pointer;
+    }
+    mat-icon{
+        transform: translateX(-5px);
+    }
 }
 
 .fire-type-radio-button-group{
