--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.component.scss
@@ -7,12 +7,14 @@
   height: 50px;
   display: flex;
   justify-content: space-between;
-  padding:0 24px;
+  padding:60px 20px 0 20px;
   align-items: center;
   position: sticky !important;
   top:0;
   background-color: white;
   z-index:9999;
+  font-weight: 600;
+  font-size: 18px;
 }
 
 
@@ -63,9 +65,9 @@
 .rof-button-container {
   display: flex;
   height: 43px;
-  padding: 8px 32px 8px 24px;
+  padding: 8px 0px;
   align-items: center;
-  gap: calc(100vw - 384px);
+  gap: calc(100vw - 344px);
   bottom: 60px;
   position: fixed;
   .rof-button {
@@ -75,8 +77,8 @@
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    background-color: #f5f5f5;
-    border: solid 1px #bfbfbf;
+    background-color: #FFF;
+    border: solid 1px #B0B0B0;;
     &-primary {
       width: 138px;
       height: 43px;
@@ -86,6 +88,11 @@
       line-height: normal;
       color: white;
       background-color: #123262;
+      flex-direction: row-reverse;
+      .mat-icon{
+        margin-right: 0px;
+      }
+     
     }
     &-disabled {
       width: 138px;
@@ -95,6 +102,8 @@
       font-weight: 600;
       line-height: normal;
       background-color: gray;
+      flex-direction: row-reverse;
+
     }
   }
   .flow-buttons{
@@ -196,13 +205,13 @@
     margin: 20px;
   }
   &-secondary-header {
-    color: #484644;
+    color: #565656;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
     letter-spacing: -0.32px;
-    margin: 20px;
+    margin: 20px 0px;
   }
   &-body {
     font-size: 17px;
