--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/contact-page/rof-contact-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/contact-page/rof-contact-page.component.html
@@ -2,12 +2,12 @@
   <div class="rof-text-primary-header">{{ title }}</div>
   <div class="rof-text-secondary-header">{{ message }}</div>
 
+  <mat-label class="input-label">Name*</mat-label>
   <mat-form-field appearance="outline" class="input-style">
-    <mat-label>Name</mat-label>
     <input matInput type="text" [(ngModel)]="reportOfFire.fullName">
   </mat-form-field>
+  <mat-label class="input-label">Phone Number*</mat-label>
   <mat-form-field appearance="outline" class="input-style">
-    <mat-label>Phone Number</mat-label>
     <input matInput mask="(000) 000-0000" [(ngModel)]="reportOfFire.phoneNumber">
   </mat-form-field>
 
