--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/simple-question-page/rof-simple-question-page.component.html
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/simple-question-page/rof-simple-question-page.component.html
@@ -2,7 +2,7 @@
   <div class="rof-text-primary-header">{{ title }}</div>
   <div class="rof-text-secondary-header">{{ message }}</div>
 
-  <mat-button-toggle-group class="rof-toggle-group" [(ngModel)]="updateAttribute ? reportOfFire[updateAttribute] : localVal" #questionOptions="matButtonToggleGroup" vertical name="questionButtons" aria-label="Question Options">
+  <mat-button-toggle-group class="simple-toggle" [(ngModel)]="updateAttribute ? reportOfFire[updateAttribute] : localVal" #questionOptions="matButtonToggleGroup" vertical name="questionButtons" aria-label="Question Options">
     <mat-button-toggle value="yes" (change)="onValChange('yes')"><mat-icon>check</mat-icon>Yes</mat-button-toggle>
     <mat-button-toggle value="no" (change)="onValChange('no')"><mat-icon>close</mat-icon>No</mat-button-toggle>
     <mat-button-toggle *ngIf="allowIDontKnowButton" value="skip"><mat-icon>question_mark</mat-icon>I'm not sure</mat-button-toggle>
@@ -10,7 +10,7 @@
 
   <div class="rof-button-container">
     <button class="rof-button" mat-flat-button (click)="previous()">Previous</button>
-	  <button [class]="'rof-button' + (!questionOptions.value ? '-disabled' : '-primary')" [disabled]="!questionOptions.value" mat-flat-button (click)="questionOptions.value === 'yes' ? next() : skip()" color="primary">Next<mat-icon class="left-padding">arrow_forward</mat-icon></button>
+	  <button [class]="'rof-button' + (!questionOptions.value ? '-disabled' : '-primary')" [disabled]="!questionOptions.value" mat-flat-button (click)="questionOptions.value === 'yes' ? next() : skip()" color="primary">Continue</button>
   </div>
 
 </div>
