--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/comment-page/rof-comments-page.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/comment-page/rof-comments-page.component.scss
@@ -1,7 +1,9 @@
 @import '../report-of-fire.component.scss';
 
 .text-container {
-  margin: 20px;
-  width: calc(100vw - 40px);
+  margin: 20px 0px;
+  width: calc(100vw - 60px);
   height: calc(100vh - 400px);
+  background-color: #F5F5F5 !important;
+  border-radius: 3px;
 }
