--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.component.scss
@@ -77,7 +77,7 @@
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    background-color: #FFF;
+    background-color: #F5F5F5;
     border: solid 1px #B0B0B0;;
     &-primary {
       width: 138px;
