--- a/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/wildfires-list/wildfires-list.component.desktop.scss
@@ -28,7 +28,7 @@
   }
   .mat-icon {
     color: #a7a9ac;
-    margin-right: 0 !important;
+    margin-right: 10px !important;
   }
   button span {
     white-space: nowrap;
@@ -106,6 +106,9 @@ table tr:nth-child(even) td{
         line-height: 40px;
         border-radius: 50%;
         cursor: pointer;
+    }
+    mat-icon{
+        transform: translateX(-5px);
     }
 }
 
