--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.component.scss
@@ -179,9 +179,9 @@
   font-size: 19px;
   font-style: normal;
   font-weight: 600;
-  line-height: normal;
   letter-spacing: -0.38px;
   margin-top: 16px;
+  padding-bottom: 30px !important
 }
 
 .rof-text {
