non-compliance fixes

--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.component.scss
@@ -173,6 +173,11 @@
   }
 }
 
+::ng-deep.mat-button-toggle-button {
+   height: 90px !important;
+}
+  
+
 ::ng-deep.mat-button-toggle-label-content {
   color: #000;
   text-align: center;
