--- a/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.component.scss
+++ b/client/wfnews-war/src/main/angular/src/app/components/report-of-fire/report-of-fire.component.scss
@@ -102,6 +102,7 @@
       font-weight: 600;
       line-height: normal;
       flex-direction: row-reverse;
+      color: rgba(0, 0, 0)
 
     }
   }
@@ -177,7 +178,6 @@
    height: 90px !important;
 }
   
-
 ::ng-deep.mat-button-toggle-label-content {
   color: #000;
   text-align: center;
